_cache/v0.18.0/zlib/specs.md
---
title: "zlib"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["1.2.12", "1.2.8"], "compilers": ["clang@=7.0.0", "gcc@=6.5.0", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 7, "num_specs_by_stack": {"data-vis-sdk": 1, "radiuss": 1, "root": 7, "tutorial": 7, "build_systems": 1, "e4s": 1}}
spec_details: [{"hash": "fntvsj6xevbz5gyq7kfa4xg7oxnaolxs", "compiler": "gcc@=7.5.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["data-vis-sdk", "radiuss", "root", "tutorial", "build_systems", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-gcc-7.5.0-zlib-1.2.12-fntvsj6xevbz5gyq7kfa4xg7oxnaolxs.spack"}, {"hash": "rlo3go7mpfwicumepslj4pth7z4t3a46", "compiler": "gcc@=8.4.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-gcc-8.4.0-zlib-1.2.12-rlo3go7mpfwicumepslj4pth7z4t3a46.spack"}, {"hash": "3en3ddq56wgg3we6jwklzwb7cfe7uwjm", "compiler": "clang@=7.0.0", "versions": ["1.2.8"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "+pic", "+shared"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/clang-7.0.0/zlib-1.2.8/linux-ubuntu18.04-x86_64-clang-7.0.0-zlib-1.2.8-3en3ddq56wgg3we6jwklzwb7cfe7uwjm.spack"}, {"hash": "gueun6gngeyk4khe6qqnakxrtgox46sb", "compiler": "gcc@=7.5.0", "versions": ["1.2.8"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "+pic", "+shared"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/zlib-1.2.8/linux-ubuntu18.04-x86_64-gcc-7.5.0-zlib-1.2.8-gueun6gngeyk4khe6qqnakxrtgox46sb.spack"}, {"hash": "2f23wbxhtydzawd2lsdiw3a6rdop4o4p", "compiler": "gcc@=7.5.0", "versions": ["1.2.8"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "+pic", "+shared"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/zlib-1.2.8/linux-ubuntu18.04-x86_64-gcc-7.5.0-zlib-1.2.8-2f23wbxhtydzawd2lsdiw3a6rdop4o4p.spack"}, {"hash": "g4z6hjrherdhgref4busphl4zketf47z", "compiler": "gcc@=6.5.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-6.5.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-gcc-6.5.0-zlib-1.2.12-g4z6hjrherdhgref4busphl4zketf47z.spack"}, {"hash": "3svypjaie5farii5zcgm6yfu43la2ixs", "compiler": "clang@=7.0.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/clang-7.0.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-clang-7.0.0-zlib-1.2.12-3svypjaie5farii5zcgm6yfu43la2ixs.spack"}]
---