_cache/v0.18.1/zlib/specs.md
---
title: "zlib"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["1.2.12", "1.2.8"], "compilers": ["clang@=7.0.0", "gcc@=6.5.0", "gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 11, "num_specs_by_stack": {"radiuss": 1, "data-vis-sdk": 1, "tutorial": 7, "e4s": 1, "root": 11, "build_systems": 1, "aws-ahug": 2, "aws-isc": 2, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2}}
spec_details: [{"hash": "fntvsj6xevbz5gyq7kfa4xg7oxnaolxs", "compiler": "gcc@=7.5.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["radiuss", "data-vis-sdk", "tutorial", "e4s", "root", "build_systems"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-gcc-7.5.0-zlib-1.2.12-fntvsj6xevbz5gyq7kfa4xg7oxnaolxs.spack"}, {"hash": "qm3akappjpu4lhp3sxprfddxql4sozi3", "compiler": "gcc@=7.3.1", "versions": ["1.2.12"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["aws-ahug", "aws-isc", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/zlib-1.2.12/linux-amzn2-x86_64_v4-gcc-7.3.1-zlib-1.2.12-qm3akappjpu4lhp3sxprfddxql4sozi3.spack"}, {"hash": "irjui7rbo67ryvkicz3qq4zrnh23xyqj", "compiler": "gcc@=7.3.1", "versions": ["1.2.12"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/zlib-1.2.12/linux-amzn2-graviton2-gcc-7.3.1-zlib-1.2.12-irjui7rbo67ryvkicz3qq4zrnh23xyqj.spack"}, {"hash": "bo72l7im3rwtlzpcu5ntnvr53qe52r3o", "compiler": "gcc@=7.3.1", "versions": ["1.2.12"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/zlib-1.2.12/linux-amzn2-aarch64-gcc-7.3.1-zlib-1.2.12-bo72l7im3rwtlzpcu5ntnvr53qe52r3o.spack"}, {"hash": "6rzw6syzhd5ogjyff4lar3kb3mu4klhr", "compiler": "gcc@=7.3.1", "versions": ["1.2.12"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["aws-ahug", "aws-isc", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/zlib-1.2.12/linux-amzn2-x86_64_v3-gcc-7.3.1-zlib-1.2.12-6rzw6syzhd5ogjyff4lar3kb3mu4klhr.spack"}, {"hash": "rlo3go7mpfwicumepslj4pth7z4t3a46", "compiler": "gcc@=8.4.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-gcc-8.4.0-zlib-1.2.12-rlo3go7mpfwicumepslj4pth7z4t3a46.spack"}, {"hash": "3en3ddq56wgg3we6jwklzwb7cfe7uwjm", "compiler": "clang@=7.0.0", "versions": ["1.2.8"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "+pic", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/clang-7.0.0/zlib-1.2.8/linux-ubuntu18.04-x86_64-clang-7.0.0-zlib-1.2.8-3en3ddq56wgg3we6jwklzwb7cfe7uwjm.spack"}, {"hash": "g4z6hjrherdhgref4busphl4zketf47z", "compiler": "gcc@=6.5.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-6.5.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-gcc-6.5.0-zlib-1.2.12-g4z6hjrherdhgref4busphl4zketf47z.spack"}, {"hash": "gueun6gngeyk4khe6qqnakxrtgox46sb", "compiler": "gcc@=7.5.0", "versions": ["1.2.8"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "+pic", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/zlib-1.2.8/linux-ubuntu18.04-x86_64-gcc-7.5.0-zlib-1.2.8-gueun6gngeyk4khe6qqnakxrtgox46sb.spack"}, {"hash": "2f23wbxhtydzawd2lsdiw3a6rdop4o4p", "compiler": "gcc@=7.5.0", "versions": ["1.2.8"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "+pic", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/zlib-1.2.8/linux-ubuntu18.04-x86_64-gcc-7.5.0-zlib-1.2.8-2f23wbxhtydzawd2lsdiw3a6rdop4o4p.spack"}, {"hash": "3svypjaie5farii5zcgm6yfu43la2ixs", "compiler": "clang@=7.0.0", "versions": ["1.2.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+optimize", "patches=0d38234", "+pic", "+shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/clang-7.0.0/zlib-1.2.12/linux-ubuntu18.04-x86_64-clang-7.0.0-zlib-1.2.12-3svypjaie5farii5zcgm6yfu43la2ixs.spack"}]
---